--- a/routepro/pubspec.yaml
+++ b/routepro/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
   
   assets:
     - images/aaa.png
+    - images/640.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
